[tool.poetry]
name = "tri-bupt-login"
version = "0.1.0"
description = ""
authors = ["qcts33 <qcthreestones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.7"
requests = "^2.22"
pysimplegui = "^3.39"
lxml = "^4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = {version = "^18.3-alpha.0",allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
